--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
-.mvn/timing.properties
-
-# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
-!/.mvn/wrapper/maven-wrapper.jar
+.mvn/
+.apt_generated/
+.settings/
+.classpath
+.factorypath
+.project
+**/.*.md.html
