Correct bintray repo Id

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
 
     @author Sebastian Thomschke, Vegard IT GmbH
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -259,7 +258,7 @@
     <distributionManagement>
         <downloadUrl>https://jcenter.bintray.com/</downloadUrl>
         <repository>
-            <id>bintray-releases</id>
+            <id>bintray-release-uploads</id>
             <url>https://api.bintray.com/maven/vegardit/maven-public/${project.artifactId}/;publish=1</url>
             <releases>
                 <enabled>true</enabled>
