--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,15 @@
 <!--
    Copyright 2013-2018 by Vegard IT GmbH, Germany, https://vegardit.com
    SPDX-License-Identifier: Apache-2.0
+
+   check for new dependency/plugin updates using:
+      mvn versions:display-dependency-updates versions:display-plugin-updates
+   plugin announcments: https://blogs.apache.org/maven/
+
    @author Sebastian Thomschke, Vegard IT GmbH
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
 
@@ -31,14 +37,8 @@
    </licenses>
 
 
-   <!--
-     mvn versions:display-dependency-updates
-     mvn versions:display-plugin-updates
-     plugin announcments: https://blogs.apache.org/maven/
-   -->
-
    <properties>
-      <!-- 
+      <!--
          use credentials from settings.xml for server with id "github-commits" during maven release
          http://maven.apache.org/maven-release/maven-release-plugin/faq.html#credentials
          https://issues.apache.org/jira/browse/MRELEASE-420
@@ -58,9 +58,6 @@
       <java.version.integration-tests>${java.version}</java.version.integration-tests>
       <java.vendor.integration-tests>${java.vendor}</java.vendor.integration-tests>
 
-      <!-- until https://github.com/mojohaus/extra-enforcer-rules/issues/52 -->
-      <enforcer.maxBytecodeVersion>${java.version}</enforcer.maxBytecodeVersion>
-
       <!-- requiring 3.2.2 because of https://issues.apache.org/jira/browse/MNG-4565 -->
       <maven.minimum.version>3.2.2</maven.minimum.version>
 
@@ -76,7 +73,8 @@
       <!-- enables https://github.com/timgifford/maven-buildtime-extension -->
       <buildtime.output.log>true</buildtime.output.log>
 
-      <checkstyle.version>8.10.1</checkstyle.version>
+      <checkstyle.version>8.11</checkstyle.version>
+      <checkstyle.violation-severity>warning</checkstyle.violation-severity>
 
       <custom.niceManifest>true</custom.niceManifest>
 
@@ -86,6 +84,14 @@
           * workaround for https://github.com/timgifford/maven-buildtime-extension/issues/33
           */
          session.systemProperties["buildtime.output.log"] = "true"
+
+         def artifactResolver = session.lookup("org.apache.maven.artifact.resolver.ArtifactResolver")
+         def artifactFactory = session.lookup("org.apache.maven.artifact.factory.ArtifactFactory")
+         def setProjectProp = { String name, String value ->
+            project.properties[name] = value
+            log.info("Set project property [$name] '${project.properties[name]}'")
+         }
+
 
          if(project.parent != null) {
             /*
@@ -151,12 +157,6 @@
          }
 
 
-         def setProjectProp = { String name, String value -> 
-            project.properties[name] = value
-            log.info("Set project property [$name] '${project.properties[name]}'")
-         }
-
-
          /*
           * determine if the artefact contains Java sources
           */
@@ -166,8 +166,6 @@
          /*
           * loading/locating eclipse Java compiler artifact
           */
-         def artifactResolver = session.lookup("org.apache.maven.artifact.resolver.ArtifactResolver")
-         def artifactFactory = session.lookup("org.apache.maven.artifact.factory.ArtifactFactory")
          def ecjArtifactMeta = artifactFactory.createArtifactWithClassifier("org.eclipse.jdt.core.compiler", "ecj", "4.6.1", "jar", null)
          def ecjArtifact = artifactResolver.resolve(new org.apache.maven.artifact.resolver.ArtifactResolutionRequest()
             .setArtifact(ecjArtifactMeta)
@@ -181,17 +179,17 @@
           * determine bootclasspath for compilation of src/main/java
           */
          def compileJDKSpec = [
-            "version": project.properties["java.version"], 
+            "version": project.properties["java.version"],
             "vendor": project.properties["java.vendor"]
          ]
          // https://github.com/apache/maven/tree/master/maven-core/src/main/java/org/apache/maven/toolchain
-         def jdkToolchains = session.lookup("org.apache.maven.toolchain.ToolchainManager")?.getToolchains(session, "jdk", compileJDKSpec)
-         if(!jdkToolchains)
+         def compileJDKs = session.lookup("org.apache.maven.toolchain.ToolchainManager")?.getToolchains(session, "jdk", compileJDKSpec)
+         if(!compileJDKs)
              throw new RuntimeException("No toolchain found with specification $compileJDKSpec")
-         def compileJDK = jdkToolchains[0]
+         def compileJDK = compileJDKs[0]
          setProjectProp("custom.compileBootClasspath", [
-            "${compileJDK.javaHome}/jre/lib/rt.jar", 
-            "${compileJDK.javaHome}/jre/lib/jce.jar", 
+            "${compileJDK.javaHome}/jre/lib/rt.jar",
+            "${compileJDK.javaHome}/jre/lib/jce.jar",
             "${compileJDK.javaHome}/jre/lib/jsse.jar"
          ].join(File.pathSeparator))
 
@@ -200,13 +198,13 @@
           * determine bootclasspath for compilation of src/test/java
           */
          def testCompileJDKSpec = [
-            "version": project.properties["java.version.unit-tests"], 
+            "version": project.properties["java.version.unit-tests"],
             "vendor": project.properties["java.vendor.unit-tests"]
          ]
-         jdkToolchains = session.lookup("org.apache.maven.toolchain.ToolchainManager")?.getToolchains(session, "jdk", testCompileJDKSpec)
-         if(!jdkToolchains)
-             throw new RuntimeException("No toolchain found with specification $compileJDKSpec")
-         def testCompileJDK=jdkToolchains[0]
+         testCompileJDKs = session.lookup("org.apache.maven.toolchain.ToolchainManager")?.getToolchains(session, "jdk", testCompileJDKSpec)
+         if(!testCompileJDKs)
+             throw new RuntimeException("No toolchain found with specification $testCompileJDKSpec")
+         def testCompileJDK=testCompileJDKs[0]
          setProjectProp("custom.testCompileBootClasspath", [
             "${testCompileJDK.javaHome}/jre/lib/rt.jar",
             "${testCompileJDK.javaHome}/jre/lib/jce.jar",
@@ -257,7 +255,7 @@
           * loading/locating checkstyle config
           */
          if(!project.properties.containsKey("checkstyle.config.path")) {
-            if(project.artifactId == "vegardit-maven-parent") {
+            if(new File("src/etc/checkstyle.xml").exists()) {
                setProjectProp("custom.checkstyleXmlPath", "src/etc/checkstyle.xml")
             } else {
                def checkstyleArtifactMeta = null
@@ -325,7 +323,7 @@
 
    <build>
       <resources>
-          <!-- https://stackoverflow.com/questions/34749819/maven-resource-filtering-exclude/34750851 -->
+          <!-- https://stackoverflow.com/questions/34749819/maven-resource-filtering-exclude/34750851#34750851 -->
          <resource>
             <directory>src/main/resources</directory>
             <includes>
@@ -366,7 +364,7 @@
       <plugins>
          <!--
          ================================================================
-         globally enabled plug-ins
+         Globally enabled plug-ins.
          ================================================================
          -->
          <plugin>
@@ -408,7 +406,7 @@
             <!-- http://groovy.github.io/GMavenPlus/ -->
             <groupId>org.codehaus.gmavenplus</groupId>
             <artifactId>gmavenplus-plugin</artifactId>
-            <version>1.6</version>
+            <version>1.6.1</version>
             <executions>
                <execution>
                   <id>groovy.script.onInitialize@initialize</id>
@@ -532,10 +530,9 @@
                   <configuration>
                      <skip>${skip.enforcer.enforce-bytecode-version}</skip>
                      <rules>
-                        <enforceBytecodeVersion>
-                           <maxJdkVersion>${enforcer.maxBytecodeVersion}</maxJdkVersion>
+                        <enforceBytecodeVersion ignoreOptionals="true">
+                           <maxJdkVersion>${java.version}</maxJdkVersion>
                            <ignoredScopes>
-                              <ignoredScope>optional</ignoredScope>
                               <ignoredScope>provided</ignoredScope>
                               <ignoredScope>runtime</ignoredScope>
                               <ignoredScope>test</ignoredScope>
@@ -582,7 +579,7 @@
                   <!-- http://www.mojohaus.org/extra-enforcer-rules/ -->
                   <groupId>org.codehaus.mojo</groupId>
                   <artifactId>extra-enforcer-rules</artifactId>
-                  <version>1.0-beta-7</version>
+                  <version>1.0-beta-9</version>
                </dependency>
             </dependencies>
          </plugin>
@@ -607,9 +604,9 @@
             </executions>
          </plugin>
 
-         <!-- 
-            We are using the Eclipse Compiler via the exec-maven-plugin because neither plexus-compiler-eclipse nor tycho-compiler-jdt 
-            (https://wiki.eclipse.org/Tycho/FAQ#Can_I_use_the_Tycho_compiler_support_in_non-OSGi_projects.2C_too.3F) are toolchain aware thus would 
+         <!--
+            We are using the Eclipse Compiler via the exec-maven-plugin because neither plexus-compiler-eclipse nor tycho-compiler-jdt
+            (https://wiki.eclipse.org/Tycho/FAQ#Can_I_use_the_Tycho_compiler_support_in_non-OSGi_projects.2C_too.3F) are toolchain aware thus would
             always compile against the boot-classpath of the JVM executing Maven.
          -->
          <plugin>
@@ -795,7 +792,7 @@
          </plugin>
 
          <plugin>
-                <!-- enable code coverage -->
+            <!-- enable code coverage -->
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.8.1</version>
@@ -806,7 +803,7 @@
                      <goal>prepare-agent</goal>
                   </goals>
                   <configuration>
-                     <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                     <destFile>${project.build.directory}/jacoco.exec</destFile>
                      <propertyName>jacoco.surefireAgent</propertyName>
                   </configuration>
                </execution>
@@ -817,8 +814,8 @@
                      <goal>report</goal>
                   </goals>
                   <configuration>
-                     <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
-                     <outputDirectory>${project.reporting.outputDirectory}/code-coverage</outputDirectory>
+                     <dataFile>${project.build.directory}/jacoco.exec</dataFile>
+                     <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
                   </configuration>
                </execution>
                <execution>
@@ -828,7 +825,7 @@
                      <goal>prepare-agent</goal>
                   </goals>
                   <configuration>
-                     <destFile>${project.build.directory}/coverage-reports/jacoco-it.exec</destFile>
+                     <destFile>${project.build.directory}/jacoco-it.exec</destFile>
                      <propertyName>jacoco.failsafeAgent</propertyName>
                   </configuration>
                </execution>
@@ -839,7 +836,7 @@
                      <goal>report</goal>
                   </goals>
                   <configuration>
-                     <dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>
+                     <dataFile>${project.build.directory}/jacoco-it.exec</dataFile>
                      <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
                   </configuration>
                </execution>
@@ -893,7 +890,10 @@
                   <configuration>
                      <configLocation>${checkstyle.config.path}</configLocation>
                      <consoleOutput>true</consoleOutput>
-                     <failsOnError>true</failsOnError>
+                     <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                     <failOnViolation>true</failOnViolation>
+                     <logViolationsToConsole>true</logViolationsToConsole>
+                     <violationSeverity>${checkstyle.violation-severity}</violationSeverity>
                   </configuration>
                </execution>
             </executions>
@@ -911,13 +911,9 @@
       <pluginManagement>
          <!--
          ================================================================
-         globally defined plug-in configurations and versions
-         these settings only take effect once a plugin is actually used in the build/plugins section 
+         Globally defined plug-in configurations and versions.
+         These settings only take effect once a plugin is actually used in the build/plugins section.
          ================================================================
-         -->
-         <!-- 
-            executions are bound to phase "none" in child projects, thus they need to be explicitly enabled
-            https://stackoverflow.com/questions/16540808/can-i-configure-multiple-plugin-executions-in-pluginmanagement-and-choose-from
          -->
          <plugins>
             <plugin>
@@ -979,8 +975,8 @@
                   <archive>
                      <!-- generated by maven-bundle-plugin: -->
                      <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                     <!-- To support http://stackoverflow.com/questions/2712970/how-to-get-maven-artifact-version-at-runtime -->
                      <manifest>
+                        <!-- to support http://stackoverflow.com/questions/2712970/how-to-get-maven-artifact-version-at-runtime -->
                         <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                         <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                      </manifest>
@@ -998,8 +994,8 @@
                   <archive>
                      <!-- generated by maven-bundle-plugin: -->
                      <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                     <!-- To support http://stackoverflow.com/questions/2712970/how-to-get-maven-artifact-version-at-runtime -->
                      <manifest>
+                        <!-- to support http://stackoverflow.com/questions/2712970/how-to-get-maven-artifact-version-at-runtime -->
                         <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                         <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                      </manifest>
@@ -1014,7 +1010,7 @@
 
             <plugin>
                <artifactId>maven-ear-plugin</artifactId>
-               <version>3.0.0</version>
+               <version>3.0.1</version>
                <configuration>
                   <archive>
                      <manifest>
@@ -1217,7 +1213,7 @@
                <!-- http://maven.apache.org/guides/mini/guide-configuring-plugins.html#Using_the_reporting_Tag_VS_build_Tag -->
                <!-- https://maven.apache.org/plugins/maven-javadoc-plugin/faq.html#Where_in_the_pom.xml_do_I_configure_the_Javadoc_Plugin -->
                <artifactId>maven-javadoc-plugin</artifactId>
-               <version>3.0.0</version>
+               <version>3.0.1</version>
                <configuration>
                   <skip>${maven.javadoc.skip}</skip>
                   <!-- exclude internal package and java.*, javax.* stubs -->
@@ -1243,9 +1239,9 @@
             <groupId>co.leantechniques</groupId>
             <artifactId>maven-buildtime-extension</artifactId>
             <version>2.0.3</version>
-            <!-- 
+            <!--
                 Newer versions like 3.x and other profilers like https://github.com/khmarbaise/maven-buildtime-profiler
-                or https://github.com/jcgay/maven-profiler are not portable as they cannot be configured in the parent pom.xml 
+                or https://github.com/jcgay/maven-profiler are not portable as they cannot be configured in the parent pom.xml
                 directly but need to be registered at ~/.m2/extensions.xml or <projectroot>/.m2/extensions.xml
             -->
          </extension>
@@ -1303,7 +1299,7 @@
          <plugin>
             <!-- Generate a report based on the results of unit tests. -->
             <artifactId>maven-surefire-report-plugin</artifactId>
-            <version>2.21.0</version>
+            <version>2.22.0</version>
             <configuration>
                <skip>${skip.report.maven-surefire-report-plugin}</skip>
             </configuration>
@@ -1326,7 +1322,7 @@
             <reportSets>
                <reportSet>
                   <reports>
-                            <!-- select non-aggregate reports -->
+                     <!-- select non-aggregate reports -->
                      <report>report</report>
                   </reports>
                </reportSet>
@@ -1383,7 +1379,7 @@
 
          <plugin>
             <artifactId>maven-project-info-reports-plugin</artifactId>
-            <version>2.9</version>
+            <version>3.0</version>
             <configuration>
                <skip>${skip.report.maven-project-info-reports-plugin}</skip>
             </configuration>
@@ -1468,7 +1464,7 @@
                         <configuration>
                            <scripts>
                               <script><![CDATA[
-                              def setProjectProp = { String name, String value -> 
+                              def setProjectProp = { String name, String value ->
                                  project.properties[name] = value
                                  log.info("Set project property [$name] '${project.properties[name]}'");
                               }
@@ -1521,7 +1517,7 @@
                            <!-- server id as set in settings.xml that contains the credentials -->
 
                            <server>${github.site.server}</server>
-                           <!-- 
+                           <!--
                               if a access token is used it needs repo.repo_public and user.user:email permissions otherwise
                               "Error retrieving user info: Not Found (404)" occurs, see https://github.com/github/maven-plugins/issues/100
                            -->
