--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
    SPDX-License-Identifier: Apache-2.0
 
    check for new dependency/plugin updates using:
-      mvn versions:display-dependency-updates versions:display-plugin-updates
+      mvn -U versions:display-dependency-updates versions:display-plugin-updates
    plugin announcments: https://blogs.apache.org/maven/
 
    @author Sebastian Thomschke, Vegard IT GmbH
@@ -16,7 +16,7 @@
 
    <groupId>com.vegardit.maven</groupId>
    <artifactId>vegardit-maven-parent</artifactId>
-   <version>2.1.4-SNAPSHOT</version>
+   <version>2.2.0-SNAPSHOT</version>
    <packaging>pom</packaging>
 
 
@@ -26,7 +26,6 @@
       <url>https://vegardit.com/</url>
    </organization>
    <inceptionYear>2013</inceptionYear>
-
 
    <licenses>
       <license>
@@ -59,11 +58,12 @@
       <java.vendor.integration-tests>${java.vendor}</java.vendor.integration-tests>
 
       <!-- requiring 3.2.2 because of https://issues.apache.org/jira/browse/MNG-4565 -->
-      <maven.minimum.version>3.2.2</maven.minimum.version>
+      <!-- requiring 3.3.9 because of jacoco-maven-plugin -->
+      <maven.minimum.version>3.3.9</maven.minimum.version>
 
-      <maven.scm.version>1.10.0</maven.scm.version>
+      <maven.scm.version>1.11.1</maven.scm.version>
       <maven.scm.svnjava.version>2.1.2</maven.scm.svnjava.version>
-      <maven.wagon.version>3.1.0</maven.wagon.version>
+      <maven.wagon.version>3.2.0</maven.wagon.version>
 
       <!-- see http://www.mkyong.com/maven/maven-site-build-is-very-slow-dependency-report/ -->
       <!-- see http://java-drobnosti.blogspot.de/2012/12/maven-slow-generating-dependencies.html -->
@@ -73,7 +73,7 @@
       <!-- enables https://github.com/timgifford/maven-buildtime-extension -->
       <buildtime.output.log>true</buildtime.output.log>
 
-      <checkstyle.version>8.11</checkstyle.version>
+      <checkstyle.version>8.13</checkstyle.version>
       <checkstyle.violation-severity>warning</checkstyle.violation-severity>
 
       <custom.niceManifest>true</custom.niceManifest>
@@ -166,7 +166,7 @@
          /*
           * loading/locating eclipse Java compiler artifact
           */
-         def ecjArtifactMeta = artifactFactory.createArtifactWithClassifier("org.eclipse.jdt.core.compiler", "ecj", "4.6.1", "jar", null)
+         def ecjArtifactMeta = artifactFactory.createArtifactWithClassifier("org.eclipse.jdt", "ecj", "3.15.0", "jar", null)
          def ecjArtifact = artifactResolver.resolve(new org.apache.maven.artifact.resolver.ArtifactResolutionRequest()
             .setArtifact(ecjArtifactMeta)
             .setLocalRepository(session.localRepository)
@@ -449,7 +449,7 @@
                   <groupId>org.apache.commons</groupId>
                   <artifactId>commons-lang3</artifactId>
                   <!-- min 3.7 because of https://issues.apache.org/jira/browse/LANG-1365 -->
-                  <version>3.7</version>
+                  <version>3.8.1</version>
                </dependency>
             </dependencies>
          </plugin>
@@ -530,8 +530,11 @@
                   <configuration>
                      <skip>${skip.enforcer.enforce-bytecode-version}</skip>
                      <rules>
-                        <enforceBytecodeVersion ignoreOptionals="true">
+                        <enforceBytecodeVersion>
                            <maxJdkVersion>${java.version}</maxJdkVersion>
+                           <!-- TODO requires https://github.com/mojohaus/extra-enforcer-rules/issues/52
+                           <ignoreOptionals>true</ignoreOptionals>
+                           -->
                            <ignoredScopes>
                               <ignoredScope>provided</ignoredScope>
                               <ignoredScope>runtime</ignoredScope>
@@ -611,7 +614,7 @@
          -->
          <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.7.0</version>
+            <version>3.8.0</version>
             <executions>
                <!-- this plugin's default phases are disabled in the 'outside-eclipse-profile' since we use the exec-maven-plugin to execute ecj -->
             </executions>
@@ -725,7 +728,7 @@
             <!-- http://felix.apache.org/documentation/subprojects/apache-felix-maven-bundle-plugin-bnd.html -->
             <groupId>org.apache.felix</groupId>
             <artifactId>maven-bundle-plugin</artifactId>
-            <version>3.5.0</version>
+            <version>4.0.0</version>
             <extensions>true</extensions>
             <executions>
                <execution>
@@ -795,7 +798,7 @@
             <!-- enable code coverage -->
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.1</version>
+            <version>0.8.2</version>
             <executions>
                <execution>
                   <id>pre-unit-test</id>
@@ -877,12 +880,26 @@
          </plugin>
 
          <plugin>
+            <groupId>com.github.siom79.japicmp</groupId>
+            <artifactId>japicmp-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                  <id>cmp@package</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>cmp</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+
+         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-checkstyle-plugin</artifactId>
             <version>3.0.0</version>
             <executions>
                <execution>
-                  <id>checkstyle@package</id>
+                  <id>check@package</id>
                   <phase>package</phase>
                   <goals>
                      <goal>check</goal>
@@ -1205,7 +1222,7 @@
             <plugin>
                <!-- This plugin provides the capability to package the artifact in an uber-jar -->
                <artifactId>maven-shade-plugin</artifactId>
-               <version>3.1.1</version>
+               <version>3.2.0</version>
             </plugin>
 
             <plugin>
@@ -1226,6 +1243,32 @@
                      <additionalOption>${custom.javadocOptionXdoclint}</additionalOption>
                      <additionalOption>${custom.javadocOptionHtml5}</additionalOption>
                   </additionalOptions>
+               </configuration>
+            </plugin>
+
+            <plugin>
+               <!-- defined under pluginManagement to reuse config in plugin and reporting section, see https://stackoverflow.com/questions/32136828/share-maven-plugin-configuration-between-build-and-reporting-sections/32181937#32181937 -->
+               <groupId>com.github.siom79.japicmp</groupId>
+               <artifactId>japicmp-maven-plugin</artifactId>
+               <version>0.13.0</version>
+               <configuration>
+                  <skip>${skip.japicmp.cmp}</skip>
+                  <parameter>
+                     <!-- see parameter docs at https://siom79.github.io/japicmp/MavenPlugin.html -->
+                     <packagingSupporteds>
+                        <packagingSupported>jar</packagingSupported>
+                     </packagingSupporteds>
+                     <excludes>
+                        <exclude>*.internal.*</exclude>
+                     </excludes>
+                     <ignoreMissingClasses>true</ignoreMissingClasses>
+
+                     <onlyModified>true</onlyModified><!-- output only modified classes/methods -->
+                     <onlyBinaryIncompatible>true</onlyBinaryIncompatible><!-- output only binary incompatible changes -->
+
+                     <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
+                     <breakBuildOnBinaryIncompatibleModifications>true</breakBuildOnBinaryIncompatibleModifications>
+                  </parameter>
                </configuration>
             </plugin>
          </plugins>
@@ -1315,7 +1358,7 @@
          <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.1</version>
+            <version>0.8.2</version>
             <configuration>
                <skip>${skip.report.jacoco-maven-plugin}</skip>
             </configuration>
@@ -1324,6 +1367,18 @@
                   <reports>
                      <!-- select non-aggregate reports -->
                      <report>report</report>
+                  </reports>
+               </reportSet>
+            </reportSets>
+         </plugin>
+
+         <plugin>
+            <groupId>com.github.siom79.japicmp</groupId>
+            <artifactId>japicmp-maven-plugin</artifactId>
+            <reportSets>
+               <reportSet>
+                  <reports>
+                     <report>cmp-report</report>
                   </reports>
                </reportSet>
             </reportSets>
