--- a/pom.xml
+++ b/pom.xml
@@ -57,13 +57,16 @@
       <java.version.integration-tests>${java.version}</java.version.integration-tests>
       <java.vendor.integration-tests>${java.vendor}</java.vendor.integration-tests>
 
-      <!-- requiring 3.2.2 because of https://issues.apache.org/jira/browse/MNG-4565 -->
-      <!-- requiring 3.3.9 because of jacoco-maven-plugin -->
+      <!-- requiring 3.2.2+ because of https://issues.apache.org/jira/browse/MNG-4565 -->
+      <!-- requiring 3.3.0+ because of https://issues.apache.org/jira/browse/MNG-5755 -->
+      <!-- requiring 3.3.9+ because of org.jacoco:jacoco-maven-plugin -->
       <maven.minimum.version>3.3.9</maven.minimum.version>
 
       <maven.scm.version>1.11.1</maven.scm.version>
       <maven.scm.svnjava.version>2.1.2</maven.scm.svnjava.version>
       <maven.wagon.version>3.2.0</maven.wagon.version>
+
+      <maven.surefire.version>2.22.1</maven.surefire.version>
 
       <!-- see http://www.mkyong.com/maven/maven-site-build-is-very-slow-dependency-report/ -->
       <!-- see http://java-drobnosti.blogspot.de/2012/12/maven-slow-generating-dependencies.html -->
@@ -73,7 +76,7 @@
       <!-- enables https://github.com/timgifford/maven-buildtime-extension -->
       <buildtime.output.log>true</buildtime.output.log>
 
-      <checkstyle.version>8.13</checkstyle.version>
+      <checkstyle.version>8.14</checkstyle.version>
       <checkstyle.violation-severity>warning</checkstyle.violation-severity>
 
       <custom.niceManifest>true</custom.niceManifest>
@@ -216,10 +219,7 @@
           * configure javadoc command, https://stackoverflow.com/questions/27728733/javadoc-error-invalid-flag-xdoclintnone-when-i-use-java-7-but-it-works-i
           * since it is toolchain aware and executed after the integration tests we check the integration test JDK if it supports "-Xdoclint:none"
           */
-         def stdOut = new StringBuilder()
-         def proc = (testCompileJDK.javaHome + "/bin/javadoc -X").execute()
-         proc.consumeProcessOutput(stdOut, null)
-         proc.waitForOrKill(2000)
+         def stdOut = ["${testCompileJDK.javaHome}/bin/javadoc", "-X"].execute().text
          setProjectProp("custom.javadocOptionXdoclint", stdOut.indexOf("-Xdoclint") > -1 ? "-Xdoclint:none" : "")
          setProjectProp("custom.javadocOptionHtml5", stdOut.indexOf("-html5") > -1 ? "-html5" : "")
 
@@ -406,7 +406,7 @@
             <!-- http://groovy.github.io/GMavenPlus/ -->
             <groupId>org.codehaus.gmavenplus</groupId>
             <artifactId>gmavenplus-plugin</artifactId>
-            <version>1.6.1</version>
+            <version>1.6.2</version>
             <executions>
                <execution>
                   <id>groovy.script.onInitialize@initialize</id>
@@ -443,7 +443,7 @@
                <dependency>
                   <groupId>org.codehaus.groovy</groupId>
                   <artifactId>groovy-ant</artifactId>
-                  <version>2.5.0</version>
+                  <version>2.5.2</version>
                </dependency>
                <dependency>
                   <groupId>org.apache.commons</groupId>
@@ -1185,7 +1185,7 @@
             <plugin>
                <!-- exclude unit tests ending with ITest (= integration tests) from unit-test phase -->
                <artifactId>maven-surefire-plugin</artifactId>
-               <version>2.22.0</version>
+               <version>${maven.surefire.version}</version>
                <configuration>
                   <argLine>-Xmx768m -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -Duser.language=en -Duser.region=US -noverify
                      ${jacoco.surefireAgent}</argLine>
@@ -1198,7 +1198,7 @@
             <plugin>
                <!-- http://maven.apache.org/surefire/maven-failsafe-plugin/usage.html -->
                <artifactId>maven-failsafe-plugin</artifactId>
-               <version>2.22.0</version>
+               <version>${maven.surefire.version}</version>
                <configuration>
                   <argLine>-Xmx768m -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -Duser.language=en -Duser.region=US -noverify
                      ${jacoco.failsafeAgent}</argLine>
@@ -1342,7 +1342,7 @@
          <plugin>
             <!-- Generate a report based on the results of unit tests. -->
             <artifactId>maven-surefire-report-plugin</artifactId>
-            <version>2.22.0</version>
+            <version>${maven.surefire.version}</version>
             <configuration>
                <skip>${skip.report.maven-surefire-report-plugin}</skip>
             </configuration>
